iter_language/tests/corpus/valid/runner-explicit-multiple.iter
workspace local as main {
  base = "."
}

workspace local as scratch {
  base = "/tmp"
}

agent noop as codex {}

agent noop as claude {}

runner {
  agent = codex
  workspace = main
  continue_on_error = false
  behavior = loop
  prompt = "Explicit binding remains valid."
}
