iter_language/tests/corpus/invalid/runner-implicit-workspace-ambiguous.iter
workspace local as main {
  base = "."
}

workspace local as scratch {
  base = "/tmp"
}

agent noop {}

runner {
  agent = noop
  continue_on_error = false
  behavior = loop
  prompt = "Ambiguous workspace."
}
